<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/header" />

    <TextView
        style="@style/reddify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/reddify" />

    <TextView
        style="@style/ultra_reddify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/ultra_reddify" />

    <TextView
        style="@style/bluify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/bluify" />

    <TextView
        style="@style/mega_bluify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/mega_bluify" />

    <TextView
        style="@style/gaskify"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="7sp"
        android:gravity="center"
        android:text="jestem zbiszcznie zgąszczony"/>

</LinearLayout>